# custom-bloomin8-canvas-desktop

./: .gitignore  CLAUDE.md  README.md  capture.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  capture.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  config.rs  fixtures.rs  last_push.rs  lib.rs  library.rs  main.rs  notify.rs  render_service.rs  scheduler.rs  tray.rs
src-tauri/src/device/: client.rs  error.rs  mock.rs  mod.rs  tests.rs  types.rs  wake.rs
src-tauri/src/widgets/: config.rs  countdown.rs  crypto.rs  mod.rs  template.rs  weather.rs
src-tauri/templates/: countdown-template.html  crypto-template.html  weather-template.html
src/api/: device.ts
src/components/: ConfirmDialog.tsx  DevicePage.tsx  DeviceSwitcher.tsx  GalleryPage.tsx  OnDeviceDialog.tsx  PushImageDialog.tsx  SchedulesPage.tsx  WidgetsPage.tsx
src/components/ui/: index.tsx
src/lib/: theme.ts
