[package]
name = "bloomin8-desktop"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Disambiguates `cargo run` (used by `tauri dev`) now that `mockdevice` is a
# second [[bin]] target.
default-run = "bloomin8-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bloomin8_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal"] }
thiserror = "1"
btleplug = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
base64 = "0.22"
# Also used at test-time (cfg(test)) to run MockDevice; promoted out of
# dev-dependencies so the `mockdevice` bin (feature `mock-device`) can use it
# too without duplicating the dependency declaration.
axum = { version = "0.7", features = ["multipart"] }
tokio-cron-scheduler = "0.15.1"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSValue", "NSError", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "block2", "objc2-app-kit"] }

[dev-dependencies]
tempfile = "3"

[features]
# Gates `device::mock` (and the `mockdevice` bin) outside test builds, so a
# human can run a standalone MockDevice process for manual/E2E verification
# without shipping it in the default build.
mock-device = []

[[bin]]
name = "mockdevice"
path = "src/bin/mockdevice.rs"
required-features = ["mock-device"]

